[tool.poetry]
name = "ontouml-validator"
version = "1.0.0a0"
description = "OntoUML Graph Validator"
license = "Apache-2.0"
authors = ["Pedro Paulo F. Barcelos <p.p.favatobarcelos@utwente.nl>"]
readme = "README.md"
homepage = "https://w3id.org/ontouml/validator"
repository = "https://w3id.org/ontouml/validator"
documentation = "https://w3id.org/ontouml/validator/docs"
keywords = ["semantic-web", "knowledge-graph", "ontouml", "ontology-driven-development", "ontouml-vocabulary", "ontouml-metamodel"]
packages = [{ include = "ontouml-validator" }]
exclude = ["ontouml-validator/tests"]

[tool.poetry.urls]
"PyPi Project" = "https://pypi.org/project/ontouml-validator/"

[tool.poetry.dependencies]
importlib = "^1.0.4"
python = "^3.10"
pyyaml = "^6.0.1"
rdflib = "^7.0.0"
validators = "^0.22.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
myst-parser = "^2.0.0"
poetry = "^1.7.1"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
requests = "^2.31.0"
sphinx = "^7.2.6"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-size = "^0.2.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-toolbox = "^3.5.0"
tomli = "^2.0.1"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.vulture]
paths = ["."]
exclude = ["docs/", "sphinx/", "venv/",
    "library.py",
    "validator/modules/errors.py", "validator/vocab_lib", "validator/validations/result_issue.py"]
